# cognee-integrations

integrations/: inventory.yml
integrations/claude-code/: README.md
integrations/claude-code/scripts/: _plugin_common.py  _recall_http.py  cognee-remember.sh  cognee-search.sh  cognee_statusline_render.py  config.py  exit-watcher.py  session-start.py  sync-session-to-graph.py
integrations/claude-code/tests/: test_recall_http.py
integrations/codex/plugins/cognee/scripts/: _plugin_common.py  cognee-remember.sh  cognee-search.sh  cognee-statusline.sh  cognee_statusline_render.py  config.py  exit-watcher.py  idle-watcher.py  pre-compact.py  session-context-lookup.py  session-start.py  store-to-session.py  store-user-prompt.py  sync-session-to-graph.py
integrations/crewai/cognee_integration_crewai/: tools.py
integrations/crewai/examples/: sessionized_tools_example.py  tools_example.py
integrations/n8n/: package-lock.json
integrations/n8n/nodes/Cognee/: Cognee.node.ts
integrations/openclaw/: README.md
integrations/openclaw/src/: plugin.ts
integrations/strands/: README.md  pyproject.toml
integrations/strands/cognee_integration_strands/: tools.py
integrations/strands/examples/: example.py  session_example.html  session_example.py
integrations/strands/tests/: test_smoke.py
integrations/vellum-assistant/src/: plugin-common.ts
n8n_workflows/cognee_skill_self_improve/beginner/: workflow.json
