[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognee-integration-strands"
version = "0.1.1"
description = "A powerful integration between Strands and Cognee providing intelligent knowledge management and retrieval capabilities for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cognee>=0.4.0,<0.5.4",
    "strands-agents>=1.18.0",
    "strands-agents-tools>=0.2.16",
]

[project.urls]
Homepage = "https://github.com/topoteretes/cognee-integrations/tree/main/integrations/strands"
Repository = "https://github.com/topoteretes/cognee-integrations"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognee_integration_strands*"]
exclude = ["examples*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.6",
]
